--- a/README
+++ b/README
@@ -4,5 +4,4 @@
 
 อบรมโดยนักศึกษาสาขาเทคโนโยีคอมพิวเตอร์ คณะครุศาสตร์อุตสาหกรรม มจพ.
 
-URL:
-https://9sorn.github.io/9sorn.me/
+URL: https://9sorn.github.io/9sorn.me/
